--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "jest-fetch-mock": "^3.0.3",
